@@ -1,3 +1,5 @@
+19 Sep 2010 Change SYMBOL processing to use either $() or ${} syntax and support
+            default assignment if SYMBOL is not defined. - Paul Gorlinsky
 17 Sep 2010 Reset Reference Bits Multiple Facility - Jan Jaeger
 17 Sep 2010 Enhanced Monitor Facility - Jan Jaeger
 16 Sep 2010 Message Security Assist Extension 3 - Bernard van der Helm
